--- a/index.desktop.style.css
+++ b/index.desktop.style.css
@@ -4,6 +4,21 @@
     padding: 0;
 }
 
-body {
-    color: #0F1111;;
+:root{
+    --primary-color: #C45500;
+    --secondary-color : #b12704;
+    --green-color:#007600;
+    --blue-color:#007185;
+    --primary-font-color:#0f1111;
+    --gray-font-color: #565959;
+
+    --h1-font-size:24px;
+    /* font wight 400 , line hight 32 */
+}
+
+body h1 {
+    font-size: 24px;
+    /* font-weight: 400; */
+    line-height: 32px;
+    font-family: 'amazon-200';
 }
