--- a/styles/font.style.css
+++ b/styles/font.style.css
@@ -12,8 +12,13 @@
 
 @font-face {
     /* thin */
-    font-family: 'amazon-thin';
-    src: url('../assets/fonts/AmazonEmber_He.ttf');
+    font-family: 'amazon-n2';
+    src: url('../assets/fonts/AmazonEmberDisplay_Rg.ttf');
+} 
+@font-face {
+    /* thin */
+    font-family: 'amazon-normal';
+    src: url('../assets/fonts/AmazonEmber_Rg.ttf');
 } 
 @font-face {
     /* thin2 */
@@ -27,22 +32,15 @@
 
 
 @font-face{
-    font-family:'Amazon Ember';
+    font-family:'amazon-200';
     font-weight:200;
     src:url(https://m.media-amazon.com/images/S/sash/Dv1WQ5DdeMS5qP7.woff2) 
     format("woff2"),url(https://m.media-amazon.com/images/S/sash/e0LnMbFWJC-TMQz.woff) 
     format("woff")
 }
-@font-face{
-    font-family:'Amazon Ember2';
-    font-weight:200;
-    font-style:italic;
-    src:url(https://m.media-amazon.com/images/S/sash/ozb5-CLHQWI6Soc.woff2)
-    format("woff2"),url(https://m.media-amazon.com/images/S/sash/twzZHebXjCHBb6v.woff)
-     format("woff")
-}
 
-@font-face{font-family:'Amazon Ember5';
+
+@font-face{font-family:'amazon-500';
     font-weight:500;
     src:url(https://m.media-amazon.com/images/S/sash/VjTR4RqBzY0mUYx.woff2) format("woff2"),
     url(https://m.media-amazon.com/images/S/sash/XIvhNCZAsrT80Wz.woff) format("woff")
