--- a/index.desktop.style.css
+++ b/index.desktop.style.css
@@ -22,3 +22,67 @@ body h1 {
     line-height: 32px;
     font-family: 'amazon-200';
 }
+
+.arrow-down {
+    border: solid #6c7070;
+    border-width: 0px 2px 2px 0;
+    display: inline-block;
+    padding: 2px;
+    margin-left: 3px;
+    transform: rotate(45deg);
+}
+
+.arrow-down:hover{
+    border-color: var(--gray-font-color);
+}
+
+.bold-strong{
+    font-family: 'amazon-b', sans-serif;
+    color: #0f1111;
+}
+
+.sizes-btn-container{
+    display: flex;
+    width: 100%;
+}
+
+.size-btn{
+    border: 1px solid #8f8f8f;
+    padding: 7px 15px;
+    margin-right: 10px;
+}
+
+.size-btn a {
+    color: #333;
+    font-size: 14px;
+}
+
+.size-1{
+    border-color: var(--primary-color);
+    box-shadow: 2px 2px 2px 1px;
+}
+
+.size-2{
+    position: relative;
+    top: 0;
+    left: 0;
+    /* background-color: ; */
+
+}
+
+.size-2:hover::before{
+    content: '38" Classical';
+    position: absolute;
+    color: #0f1111;
+    font-family: 'amazon-b', sans-serif;
+    width: 100%;
+    height: 100%;
+    top: -142%;
+    left: -83%;
+    padding-bottom: 0px;
+    background-color: white;
+
+}
+
+
+
