--- a/index.desktop.style.css
+++ b/index.desktop.style.css
@@ -16,6 +16,10 @@
     /* font wight 400 , line hight 32 */
 }
 
+body {
+    background: white;
+}
+
 body h1 {
     font-size: 24px;
     /* font-weight: 400; */
@@ -36,53 +40,50 @@ body h1 {
     border-color: var(--gray-font-color);
 }
 
+
+.red-text{
+    color: var(--primary-color);
+}
+
+.blue-link{
+    color: var(--blue-color);
+}
+
+
+.gray-text{
+    margin-top: 5px;
+    color: var(--gray-font-color);
+    margin: 10px 0;
+}
+
+.green-text{
+    color: var(--green-color);
+}
+
+
+/* fonts-family */
+.normal-font{
+    font-family: 'amazon-n2';
+}
+.light-font{
+    font-family: 'amazon-200';
+}
+
 .bold-strong{
     font-family: 'amazon-b', sans-serif;
     color: #0f1111;
 }
 
-.sizes-btn-container{
-    display: flex;
-    width: 100%;
+/* font sizes */
+.font-18{
+    font-size: 18px;
 }
-
-.size-btn{
-    border: 1px solid #8f8f8f;
-    padding: 7px 15px;
-    margin-right: 10px;
-}
-
-.size-btn a {
-    color: #333;
+.font-14{
     font-size: 14px;
+    line-height: 1.2rem;
 }
 
-.size-1{
-    border-color: var(--primary-color);
-    box-shadow: 2px 2px 2px 1px;
+.font-12{
+    font-size: 12px;
+    font-weight: lighter;
 }
-
-.size-2{
-    position: relative;
-    top: 0;
-    left: 0;
-    /* background-color: ; */
-
-}
-
-.size-2:hover::before{
-    content: '38" Classical';
-    position: absolute;
-    color: #0f1111;
-    font-family: 'amazon-b', sans-serif;
-    width: 100%;
-    height: 100%;
-    top: -142%;
-    left: -83%;
-    padding-bottom: 0px;
-    background-color: white;
-
-}
-
-
-
