--- a/index.desktop.style.css
+++ b/index.desktop.style.css
@@ -36,6 +36,15 @@ body h1 {
     transform: rotate(45deg);
 }
 
+.arrow-right {
+    border: solid black;
+    border-width: 0px 2px 2px 0;
+    display: inline-block;
+    padding: 4px;
+    margin-left: 3px;
+    transform: rotate(-45deg);
+}
+
 .arrow-down:hover{
     border-color: var(--gray-font-color);
 }
@@ -86,4 +95,17 @@ body h1 {
 .font-12{
     font-size: 12px;
     font-weight: lighter;
+}
+
+.small-container{
+    /* display: flex; */
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    /* border: 2px solid red; */
+    width: 100%;
+}
+
+.small-container-flex{
+    display: flex;
+    justify-content: space-between;
 }
