--- a/styles/main/mobile.style.css
+++ b/styles/main/mobile.style.css
@@ -5,13 +5,14 @@ body{
 main {
     border-bottom: #bdbdbd solid 1px;
     height: fit-content;
+    /* transform: scaleX(0.8); */
 }
 
 #back-page-link {
-    margin-left: 20px;
+    /* margin-left: 20px; */
     color: #565959;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 8px !important;
     font-family: "amazon-normal"
 }
 
@@ -27,7 +28,7 @@ a {
     position: relative;
     z-index: -1000;
     top: 0;
-    margin: 0 20px;
+    /* margin: 0 20px; */
     margin-top: 10px;
     width: 95vw;
     height: 200vh;
@@ -45,7 +46,7 @@ a {
     position: sticky;
     top: 0;
     /* float: left; */
-    width: 100%;
+    /* width: 100%; */
     height: 10%;
     border: 1px solid red;
 }
@@ -88,12 +89,12 @@ a {
 } */
 
 .main-center-col{
-    flex: 10;
+    flex: 6;
     /* border: 2px solid black; */
-    margin: 0 10px;
+    /* margin: 0 10px; */
     font-family: 'amazon-200','sans-serif';
     font-weight: 600;
-    font-size: 14px;
+    font-size: 8px;
     background: white;
     display: flex;
     flex-direction: column;
@@ -137,7 +138,7 @@ a {
 
 .box-rating #stars  div{
     background: url('/assets/images/stars-img.png') center center/cover no-repeat;
-    width: 100px;
+    width: 50px;
     /* height: 150px; */
 }
 .box-rating #best-seller-img  div{
@@ -407,11 +408,12 @@ a {
 
 .main-right-col{
     display: flex;
-    flex: 7;
+    /* flex: 7; */
     /* flex-shrink: 10; */
     flex-direction: column;
     height: fit-content;
-    margin: 0 20px;
+    margin: 0 10px;
+    /* transform: scale(0); */
 }
 
 
@@ -423,13 +425,16 @@ a {
     /* display: block; */
     display: flex;
     height: 615px;
-    margin: 0 20px;
-    width: 100%;
+    /* margin: 0 10px; */
+    /* width: 100%; */
     flex-direction: column;
     /* border: #0f1111 2px solid; */
-    margin: 0 30% 0 0;
+    margin: 0 10% 0 0;
     justify-content: space-around;
+    font-size: 10px;
+    width: 20vw;
     /* align-items: flex-start; */
+    /* transform: scaleX(0.3); */
 }
 
 
@@ -439,6 +444,7 @@ a {
     cursor: pointer;
     background: rgb(242,242,242);
     width: 60px;
+    transform: scale(0.5);
 }
 #quantity-btn:hover{
     opacity: 0.7;
@@ -446,7 +452,7 @@ a {
 
 .btn-order{
     width: 90%;
-    margin: 0 auto;
+    margin: 5px auto;
     padding: 7px;
     border-radius: 19px;
     text-align: center;
@@ -498,7 +504,9 @@ a {
     margin: 10px 0;
     border-radius: 4px;
     background: #e6e6e6;
-    width: 100%;
+    width: 20vw;
+    font-size: 10px;
+    /* margin: auto; */
     padding: 8px;
     border: 1px solid #666666;
     box-shadow: 2px 2px 2px #c8fffb;
@@ -509,7 +517,7 @@ a {
 .right-col-social{
     display: flex;
     /* width: 60%; */
-    margin: 15px auto;
+    /* margin: 15px auto; */
     /* border: 1px solid red; */
 }
 
@@ -524,27 +532,23 @@ a {
 }
 
 .right-col-social :nth-child(2){
-    /* background-size: 112px 56px; */
     background: url('/assets/images/social.png');
     background-position-x: 0;
     background-position-y: -7px;
 
 }
 .right-col-social :nth-child(4){
-    /* background-size: 112px 56px; */
     background: url('/assets/images/social.png');
     background-repeat: no-repeat;
     background-position-x: -22px;
     background-position-y: -7px;
 }
 .right-col-social :nth-child(3){
-    /* background-size: 112px 56px; */
     background: url('/assets/images/social.png');
     background-position-x: -42px;
     background-position-y: -7px;
 }
 .right-col-social :nth-child(5){
-    /* background-size: 112px 56px; */
     background: url('/assets/images/social.png');
     background-position-x: -62px;
     background-position-y: -7px;
@@ -553,3 +557,4 @@ a {
 /* .add{
     border: 1px solid #bfbfbf;
 } */
+
