--- a/styles/navbar/navbar.desktop.style.css
+++ b/styles/navbar/navbar.desktop.style.css
@@ -5,6 +5,7 @@
 } */
 
 
+
 nav #navbar{
     min-width: 1000px;
     /* min-width: 99vw; */
@@ -14,6 +15,7 @@ nav #navbar{
     flex-direction: column;
     /* flex: 1 1 auto; */
     height: 140px;
+    
 }
 
 #nav-belt a {
@@ -66,6 +68,7 @@ nav #navbar #nav-belt{
 #nav-logo-sprites{
     height: 100%;
     width: 100%;
+    border: 1px solid transparent;
   }
   
   #nav-logo-sprites:hover{
@@ -92,6 +95,7 @@ nav #navbar #nav-belt{
     /* text-align: center; */
     align-items: center;
     justify-content: center;
+    border: 1px solid transparent;
   }
   
   .golobal-location:hover{
@@ -124,6 +128,7 @@ nav #navbar #nav-belt{
   padding: 5px;
   flex: 1 0 auto;
   /* text-align: center; */
+  /* border: 1px solid transparent; */
 }
 
 
