--- a/styles/main/main.desktop.style.css
+++ b/styles/main/main.desktop.style.css
@@ -30,7 +30,7 @@ a {
     margin: 0 20px;
     margin-top: 10px;
     width: 95vw;
-    height: 200vh;
+    /* height: 200vh; */
     background: white;
     /* border: 2px solid yellow; */
     display: flex;
@@ -550,6 +550,7 @@ a {
     background-position-y: -7px;
 }
 
-/* .add{
-    border: 1px solid #bfbfbf;
-} */
+.add-img{
+    width:360px;
+    height:360px;
+}
