--- a/styles/main/mobile.style.css
+++ b/styles/main/mobile.style.css
@@ -1,10 +1,12 @@
 body{
     background: white;
+    /* width: 100vw; */
 }
 
 main {
     border-bottom: #bdbdbd solid 1px;
     height: fit-content;
+    width: 100vw;
     /* transform: scaleX(0.8); */
 }
 
@@ -557,4 +559,9 @@ a {
 /* .add{
     border: 1px solid #bfbfbf;
 } */
+
+.add-img{
+    width:20vw;
+    height:20vw;
+}
 
