--- a/styles/navbar/navbar.mobile.style.css
+++ b/styles/navbar/navbar.mobile.style.css
@@ -7,7 +7,8 @@
 
 nav #navbar{
     /* min-width: 1000px; */
-    min-width: 99vw;
+    max-width: 99vw;
+    overflow: hidden;
     line-height: 1rem;
     font-size: 12px;
     display: flex;
