--- a/styles/main/main.desktop.style.css
+++ b/styles/main/main.desktop.style.css
@@ -47,7 +47,7 @@ a {
     /* float: left; */
     width: 100%;
     height: 10%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .small-images{
